--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 
   <main>
     <div class="container">
-      <img src="/images/illustration-hero.svg" alt="">
+      <img src="/images/illustration-hero.svg" alt="" aria-hidden="true">
 
       <div class="container-info">
         <h2>Order Summary</h2>
         <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
           device anywhere you like!</p>
-
           <div class="container-info__plan">
             <div class="container-plan__cost">
-              <img src="/images/icon-music.svg" alt="">
+              <img src="/images/icon-music.svg" alt="" aria-hidden="true">
               <span class="container-plan__type">Annual Plan</span>
               <span class="container-plan__price">$59.99/year</span>
             </div>
@@ -42,9 +41,10 @@
   </main>
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Manuel Chavez</a>.
-  </div>
+  <footer class="attribution">
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a target="_blank" href="https://github.com/manuel-chavez27">Manuel Chavez</a>.
+    </p>
+  </footer>
 </body>
 </html>
