--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
   </main>
 
   
-  <footer class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a target="_blank" href="https://github.com/manuel-chavez27">Manuel Chavez</a>.
-    </p>
+  <footer>
+    <div class="attribution">
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a target="_blank" href="https://github.com/manuel-chavez27">Manuel Chavez</a>.
+      </p>
+    </div>
   </footer>
 </body>
 </html>
